syntax = "proto3";

option go_package = "github.com/tasjen/message-app-fullstack/services/chat/chat_proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat {
  rpc GetByUsername (GetByUsernameReq) returns (GetByUsernameRes) {}
  rpc GetUserById (GetUserByIdReq) returns (GetUserByIdRes) {}
  rpc GetContacts (GetContactsReq) returns (GetContactsRes) {}
  rpc GetMessages (GetMessagesReq) returns (GetMessagesRes) {}
  rpc GetGroupIds (GetGroupIdsReq) returns (GetGroupIdsRes) {}
  rpc CreateUser (CreateUserReq) returns (CreateUserRes) {}
  rpc CreateGroup (CreateGroupReq) returns (google.protobuf.Empty) {}
  rpc AddFriend (AddFriendReq) returns (google.protobuf.Empty) {}
  rpc AddMember (AddMemberReq) returns (google.protobuf.Empty) {}
  rpc SendMessage (SendMessageReq) returns (SendMessageRes) {}
}

// message Null {}

message GetByUsernameReq {
  string username = 1;
}
message GetByUsernameRes {
  bytes user_id = 1;
}

message GetUserByIdReq {
  bytes user_id = 1;
}
message GetUserByIdRes {
  string username = 1;
}

message GetContactsReq {
  bytes user_id = 1;
}
message GetContactsRes {
  repeated Contact contacts = 1;
}

message Contact {
  string type = 1;
  bytes group_id = 2;
  string name = 3;
  int32 last_message_id = 4;
  string last_content = 5;
  google.protobuf.Timestamp last_sent_at = 6;
}

message GetMessagesReq {
  bytes user_id = 1;
  bytes group_id = 2;
}
message GetMessagesRes {
  repeated Message messages = 1;
}
message Message {
  int32 id = 1;
  string from_username = 2;
  string content = 3;
  google.protobuf.Timestamp sent_at = 4;
}

message GetGroupIdsReq {
  bytes user_id = 1;
}

message GetGroupIdsRes {
  repeated bytes group_ids = 1;
}

message CreateUserReq {
  string username = 1;
}
message CreateUserRes {
  bytes user_id = 1;
}

message CreateGroupReq {
  bytes user_id = 1;
  string group_name = 2;
}

message AddFriendReq {
  bytes from_user_id = 1;
  bytes to_user_id = 2;
}

message AddMemberReq {
  bytes user_id = 1;
  bytes group_id = 2;
}

message SendMessageReq {
  bytes user_id = 1;
  bytes group_id = 2;
  string content = 3;
  google.protobuf.Timestamp sent_at = 4;
}

message SendMessageRes {
  int32 message_id = 1;
}
