syntax = "proto3";
package messenjo;

service Auth {
  rpc VerifyToken (VerifyTokenReq) returns (VerifyTokenRes) {}
}

message VerifyTokenReq {
  string token = 1;
}

message VerifyTokenRes {
  bytes user_id = 1;
}