syntax = "proto3";
package messenjo;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat {
  rpc GetUserByUsername (GetUserByUsernameReq) returns (User) {}
  rpc GetUserById (GetUserByIdReq) returns (User) {}
  rpc GetContacts (GetContactsReq) returns (GetContactsRes) {}
  rpc GetMessages (GetMessagesReq) returns (GetMessagesRes) {}
  rpc CreateGroup (CreateGroupReq) returns (CreateGroupRes) {}
  rpc UpdateUser (UpdateUserReq) returns (google.protobuf.Empty) {}
  rpc UpdateGroup (UpdateGroupReq) returns (google.protobuf.Empty) {}
  rpc AddFriend (AddFriendReq) returns (AddFriendRes) {}
  rpc AddMembers (AddMembersReq) returns (google.protobuf.Empty) {}
  rpc AddMessage (AddMessageReq) returns (AddMessageRes) {}
  rpc ResetUnreadCount (ResetUnreadCountReq) returns (google.protobuf.Empty) {}
}


message User {
  bytes id = 1;
  string username = 2;
  string pfp = 3;
}

message GetUserByUsernameReq {
  string username = 1;
}

message GetUserByIdReq {
  bytes user_id = 1;
}

message GetContactsReq {
  bytes user_id = 1;
}
message GetContactsRes {
  repeated Contact contacts = 1;
}

message Contact {
  string type = 1;
  bytes group_id = 2;
  bytes user_id = 3;
  string name = 4;
  string pfp = 5;
  int32 member_count = 6;
  int32 unread_count = 7;
  Message lastMessage = 8;
}

message GetMessagesReq {
  bytes user_id = 1;
  bytes group_id = 2;
}
message GetMessagesRes {
  repeated Message messages = 1;
}
message Message {
  int32 id = 1;
  string from_username = 2;
  string from_pfp = 3;
  string content = 4;
  google.protobuf.Timestamp sent_at = 5;
}

message UpdateUserReq {
  bytes user_id = 1;
  string username = 2;
  string pfp = 3;
}

message CreateGroupReq {
  string group_name = 1;
  string pfp = 2;
  repeated bytes user_ids = 3;
}
message CreateGroupRes {
  bytes group_id = 1;
}

message UpdateGroupReq {
  bytes group_id = 1;
  string name = 2;
  string pfp = 3;
}

message AddFriendReq {
  bytes from_user_id = 1;
  bytes to_user_id = 2;
}
message AddFriendRes {
  bytes group_id = 1;
}

message AddMembersReq {
  bytes group_id = 1;
  repeated bytes user_ids = 2;
}

message AddMessageReq {
  bytes user_id = 1;
  bytes group_id = 2;
  string content = 3;
  google.protobuf.Timestamp sent_at = 4;
}
message AddMessageRes {
  int32 message_id = 1;
}

message ResetUnreadCountReq {
  bytes user_id = 1;
  bytes group_id = 2;
}